ft (*): add homepage

--- a/html/trip.html
+++ b/html/trip.html
@@ -38,16 +38,16 @@
                     </div>
                     <div class="trip1">
                         <h1 class="tripheading">North Province</h1>
-                        <p>From: Gikondo</p>
-                        <p>To: Kimironko</p>
+                        <p>From: Nyabugogo</p>
+                        <p>To: Gicumbi</p>
                         <p>Company: Trinity</p>
                         <p>Price: 2000 RWF</p>
                         <button>Book Now</button>
                     </div>
                     <div class="trip1">
                         <h1 class="tripheading">East Province</h1>
-                        <p>From: Gikondo</p>
-                        <p>To: Kimironko</p>
+                        <p>From: Nyabugogo</p>
+                        <p>To: Rwamagana</p>
                         <p>Company: Ritco</p>
                         <p>Price: 3000 RWF</p>
                         <button>Book Now</button>
