--- a/html/index.html
+++ b/html/index.html
@@ -20,10 +20,10 @@
                     <div class="container">
                         <a href="index.html">HOME</a>
                         <a href="trip.html">TRIP</a>
-                        <a href="bus.html">BUS</a>
                         <a href="aboutUs.html">ABOUT US</a>
                         <a href="signIn.html">LOG IN</a>
                         <a href="signUp.html">REGISTER</a>
+                        <a href="task.html">TASK</a>
                     </div>
                 </nav>
         </header>
@@ -65,7 +65,6 @@
             <div class="footer-left">
                 <a href="index.html">Home</a>
                 <a href="trip.html">Trip</a>
-                <a href="bus.html">Bus</a>
                 <a href="aboutUs.html">About Us</a>
             </div>
             <div class="footer-right">
@@ -83,17 +82,5 @@
         </footer>
 
         <script src="js/script.js"></script>
-        <script>
-            var prevScrollpos = window.pageYOffset;
-            window.onscroll = function() {
-            var currentScrollPos = window.pageYOffset;
-                if (prevScrollpos > currentScrollPos) {
-                    document.getElementById("navbar").style.top = "0";
-                } else {
-                    document.getElementById("navbar").style.top = "0";
-                }
-                prevScrollpos = currentScrollPos;
-                }
-        </script>
     </body>
 </html>
