--- a/html/signIn.html
+++ b/html/signIn.html
@@ -17,7 +17,6 @@
                         <div class="container">
                             <a href="index.html">HOME</a>
                             <a href="trip.html">TRIP</a>
-                            <a href="bus.html">BUS</a>
                             <a href="aboutUs.html">ABOUT US</a>
                             <a href="signIn.html">LOG IN</a>
                             <a href="signUp.html">REGISTER</a>
@@ -34,5 +33,24 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="footer-left">
+                <a href="index.html">Home</a>
+                <a href="trip.html">Trip</a>
+                <a href="aboutUs.html">About Us</a>
+            </div>
+            <div class="footer-right">
+                <div class="footer-sign">
+                    <a href="signIn.html">Log in</a>
+                    <a href="signUp.html">Register</a>
+                </div>
+                <div class="footer-links">
+                    <a href="#"><img src="../assets/homepage/l1.png"></a>
+                    <a href="#"><img src="../assets/homepage/l2.png"></a>
+                    <a href="#"><img src="../assets/homepage/l3.png"></a>
+                    <a href="#"><img src="../assets/homepage/l4.png"></a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
