--- a/html/signUp.html
+++ b/html/signUp.html
@@ -10,30 +10,50 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body>
-        <header id="navbar">
-                <!-- <a class="l1" href="#home"> <img class="img1" src="assets/homepage/logo.png"></a> -->
-                <nav>
-                    <div class="container">
-                        <a href="index.html">HOME</a>
-                        <a href="trip.html">TRIP</a>
-                        <a href="bus.html">BUS</a>
-                        <a href="aboutUs.html">ABOUT US</a>
-                        <a href="signIn.html">LOG IN</a>
-                        <a href="signUp.html">REGISTER</a>
-                    </div>
-                </nav>
-        </header>
-        <div class="signup_container">
-            <div class="signup_form">
-                <h1>Register</h1>
-                <input type="text" id="txt" placeholder="First Name">
-                <input type="text" id="txt" placeholder="Last Name"><br>
-                <input type="text" id="txt" placeholder="E-mail">
-                <input type="number" id="txt" placeholder="Phone Number">
-                <input type="password" id="txt" placeholder="Password"><br>
-                <input type="button" id="submit" value="Sign Up"><br>
-                <a href="signIn.html" class="signin">Sign in instead</a>
+        <div class="signup-container">
+            <header id="navbar">
+                    <!-- <a class="l1" href="#home"> <img class="img1" src="assets/homepage/logo.png"></a> -->
+                    <nav>
+                        <div class="container">
+                            <a href="index.html">HOME</a>
+                            <a href="trip.html">TRIP</a>
+                            <a href="aboutUs.html">ABOUT US</a>
+                            <a href="signIn.html">LOG IN</a>
+                            <a href="signUp.html">REGISTER</a>
+                        </div>
+                    </nav>
+            </header>
+            <div class="signup-second-container">
+                <div class="signup_form">
+                    <h1>Register</h1>
+                    <input type="text" id="txt" placeholder="First Name">
+                    <input type="text" id="txt" placeholder="Last Name"><br>
+                    <input type="text" id="txt" placeholder="E-mail">
+                    <input type="number" id="txt" placeholder="Phone Number">
+                    <input type="password" id="txt" placeholder="Password"><br>
+                    <input type="button" id="submit" value="Sign Up"><br>
+                    <a href="signIn.html" class="signin">Sign in instead</a>
+                </div>
             </div>
         </div>
+        <footer>
+            <div class="footer-left">
+                <a href="index.html">Home</a>
+                <a href="trip.html">Trip</a>
+                <a href="aboutUs.html">About Us</a>
+            </div>
+            <div class="footer-right">
+                <div class="footer-sign">
+                    <a href="signIn.html">Log in</a>
+                    <a href="signUp.html">Register</a>
+                </div>
+                <div class="footer-links">
+                    <a href="#"><img src="../assets/homepage/l1.png"></a>
+                    <a href="#"><img src="../assets/homepage/l2.png"></a>
+                    <a href="#"><img src="../assets/homepage/l3.png"></a>
+                    <a href="#"><img src="../assets/homepage/l4.png"></a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
