--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>A Trip</title>
-        <link rel="stylesheet" href="../css/oneTrip.css">
+        <title>About Us</title>
+        <link rel="stylesheet" href="../css/aboutUs.css">
         <link rel="icon" type="image/png" href="../assets/homepage/logo.png" >
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/trip.css">
     </head>
     <body>
-        <div class="oneTrip-container">
+        <div class="aboutUs-container">
             <header id="navbar">
                     <!-- <a class="l1" href="#home"> <img class="img1" src="assets/homepage/logo.png"></a> -->
                     <nav>
@@ -24,43 +24,27 @@
                         </div>
                     </nav>
             </header>
-            <div class="oneTrip-second-container">
-                <div class="trip-sidebar">
-                    <div class="trip-province">
-                        <h1 class="province-heading">Provinces</h1>
-                        <a href="#">Kigali City</a>
-                        <a href="#">North Province</a>
-                        <a href="#">East Province</a>
-                        <a href="#">West Province</a>
-                        <a href="#">South Province</a>
-                    </div>
-                    <div class="trip-bus-company">
-                        <h1 class="bus-company-heading">Companies</h1>
-                        <a href="#">KBS</a>
-                        <a href="#">Royal</a>
-                        <a href="#">Ritco</a>
-                        <a href="#">Trinity</a>
-                        <a href="#">Volcano</a>
-                    </div>
-                    <div class="trip-country">
-                        <h1 class="bus-country-heading">Country</h1>
-                        <a href="#">Rwanda</a>
-                    </div>
+            <div class="aboutUs-second-container">
+                <div class="aboutUs-sidebar">
+                    <h1 style="font-size: 40px;">
+                        <img class="img1" src="../assets/homepage/logo.png"><br>
+                        WAY FARER
+                    </h1>
                 </div>
-                <div class="trip-content">
-                    <div class="oneTrip">
-                        <h1>Kigali City</h1>
-                        <p>From: <span>Gikondo</span></p>
-                        <p>To: <span>Kimironko</span></p>
-                        <p>Departure: <span>2019-01-01</span></p>
-                        <p>Return: <span>2019-12-31</span></p>
-                        <p>Company: <span>KBS</span></p>
-                        <p>Bus Number: <span>215</span></p>
-                        <p>Seats available: <span>30</span></p>
-                        <p>Refundable: <span>No</span></p>
-                        <p>Price: <span>300 RWF</span></p>
-                        <button>Book now</button>
-                    </div>
+                <div class="aboutUs-content">
+                    <p>We are a company build to make the passengers life
+                        get easier by booking your trip anywhere you are 
+                        and get the chance to compare them to choose the 
+                        cheapest.
+                    </p>
+                    <p>We have some companies we are in partnership with 
+                        which are:
+                        <br><span class="list">1. KBS</span><br>
+                        <span class="list">2. Royal</span><br>
+                        <span class="list">3.Ritco</span><br>
+                        <span class="list">4.Trinity</span><br>
+                        <span class="list">5.Volcano</span>
+                    </p>
                 </div>
             </div>
         </div>
