--- a/html/trip.html
+++ b/html/trip.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Trip</title>
+        <title>Trips</title>
         <link rel="icon" type="image/png" href="../assets/homepage/logo.png" >
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/trip.css">
@@ -17,7 +17,6 @@
                     <div class="container">
                         <a href="index.html">HOME</a>
                         <a href="trip.html">TRIP</a>
-                        <a href="bus.html">BUS</a>
                         <a href="aboutUs.html">ABOUT US</a>
                         <a href="signIn.html">LOG IN</a>
                         <a href="signUp.html">REGISTER</a>
@@ -25,35 +24,78 @@
                 </nav>
             </header>
             <div class="trip-second-container">
-                <div class="trip-option"></div>
-                <div class="trip-sidebar">bfkhfi</div>
+                <div class="trip-sidebar">
+                    <div class="trip-province">
+                        <h1 class="province-heading">Provinces</h1>
+                        <a href="#">Kigali City</a>
+                        <a href="#">North Province</a>
+                        <a href="#">East Province</a>
+                        <a href="#">West Province</a>
+                        <a href="#">South Province</a>
+                    </div>
+                    <div class="trip-bus-company">
+                        <h1 class="bus-company-heading">Companies</h1>
+                        <a href="#">KBS</a>
+                        <a href="#">Royal</a>
+                        <a href="#">Ritco</a>
+                        <a href="#">Trinity</a>
+                        <a href="#">Volcano</a>
+                    </div>
+                    <div class="trip-country">
+                        <h1 class="bus-country-heading">Country</h1>
+                        <a href="#">Rwanda</a>
+                    </div>
+                </div>
                 <div class="trip-content">
-                    <div class="trip1">
-                        <h1 class="tripheading">Kigali City</h1>
-                        <p>From: Gikondo</p>
-                        <p>To: Kimironko</p>
-                        <p>Company: Royal</p>
-                        <p>Price: 500 RWF</p>
-                        <button>Book Now</button>
+                    <div class="trip-content-row1">
+                        <div class="trip1">
+                            <h1 class="tripheading">Kigali City</h1>
+                            <p>From: Gikondo</p>
+                            <p>To: Kimironko</p>
+                            <p>Company: Royal</p>
+                            <p>Price: 500 RWF</p>
+                            <button>Book Now</button>
+                        </div>
+                        <div class="trip1">
+                            <h1 class="tripheading">North Province</h1>
+                            <p>From: Nyabugogo</p>
+                            <p>To: Gicumbi</p>
+                            <p>Company: Trinity</p>
+                            <p>Price: 2000 RWF</p>
+                            <button>Book Now</button>
+                        </div>
+                        <div class="trip1">
+                            <h1 class="tripheading">East Province</h1>
+                            <p>From: Nyabugogo</p>
+                            <p>To: Rwamagana</p>
+                            <p>Company: Ritco</p>
+                            <p>Price: 3000 RWF</p>
+                            <button>Book Now</button>
+                        </div>
                     </div>
-                    <div class="trip1">
-                        <h1 class="tripheading">North Province</h1>
-                        <p>From: Gikondo</p>
-                        <p>To: Kimironko</p>
-                        <p>Company: Trinity</p>
-                        <p>Price: 2000 RWF</p>
-                        <button>Book Now</button>
-                    </div>
-                    <div class="trip1">
-                        <h1 class="tripheading">East Province</h1>
-                        <p>From: Gikondo</p>
-                        <p>To: Kimironko</p>
-                        <p>Company: Ritco</p>
-                        <p>Price: 3000 RWF</p>
-                        <button>Book Now</button>
+                    <div class="trip-content-row2">
                     </div>
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="footer-left">
+                <a href="index.html">Home</a>
+                <a href="trip.html">Trip</a>
+                <a href="aboutUs.html">About Us</a>
+            </div>
+            <div class="footer-right">
+                <div class="footer-sign">
+                    <a href="signIn.html">Log in</a>
+                    <a href="signUp.html">Register</a>
+                </div>
+                <div class="footer-links">
+                    <a href="#"><img src="../assets/homepage/l1.png"></a>
+                    <a href="#"><img src="../assets/homepage/l2.png"></a>
+                    <a href="#"><img src="../assets/homepage/l3.png"></a>
+                    <a href="#"><img src="../assets/homepage/l4.png"></a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
