Ch button links 167708504 (#16)
* ch ( css): add a picture

* ft add the git ignore

* ch: resizing the age input, reduce padding in the below div also in the footer with inline display

* ch(feedback-UI): delivered the feedback on the UI

--- a/html/viewAvailableU.html
+++ b/html/viewAvailableU.html
@@ -19,32 +19,26 @@
                             <a href="index.html">HOME</a>
                             <a href="trip.html">TRIP</a>
                             <a href="aboutUs.html">ABOUT US</a>
-                            <a href="signIn.html">LOG IN</a>
-                            <a href="signUp.html">REGISTER</a>
+                            <a href="user.html"><span>USER-NAME</span></a>
                         </div>
                     </nav>
             </header>
             <div class="oneTrip-second-container">
                 <div class="trip-sidebar">
                     <div class="trip-province">
-                        <h1 class="province-heading">Provinces</h1>
-                        <a href="#">Kigali City</a>
-                        <a href="#">North Province</a>
-                        <a href="#">East Province</a>
-                        <a href="#">West Province</a>
-                        <a href="#">South Province</a>
+                        <h1 class="province-heading">Trips</h1>
+                        <a href="availableU.html">Available</a>
+                        <a href="ongoingU.html">Ongoing</a>
+                        <a href="achievedU.html">Achieved</a>
                     </div>
                     <div class="trip-bus-company">
-                        <h1 class="bus-company-heading">Companies</h1>
-                        <a href="#">KBS</a>
-                        <a href="#">Royal</a>
-                        <a href="#">Ritco</a>
-                        <a href="#">Trinity</a>
-                        <a href="#">Volcano</a>
+                        <h1 class="bus-company-heading">Bookings</h1>
+                        <a href="bookAvailableU.html">Available</a>
+                        <a href="bookCanceledU.html">Canceled</a>
                     </div>
                     <div class="trip-country">
-                        <h1 class="bus-country-heading">Country</h1>
-                        <a href="#">Rwanda</a>
+                        <h1 class="bus-country-heading">Account</h1>
+                        <a href="index.html">Log out</a>
                     </div>
                 </div>
                 <div class="trip-content">
@@ -59,9 +53,8 @@
                         <p>Seats available: <span>30</span></p>
                         <p>Refundable: <span>No</span></p>
                         <p>Price: <span>300 RWF</span></p>
-                        <a href="signIn.html"><button>Book Now</button></a>
-
-                        <button>Book now</button>
+                        <a href="bookSeatU.html"><button>Book a Seat</button></a>
+                        <a href="availableU.html"><button>Back</button></a>
                     </div>
                 </div>
             </div>
@@ -79,12 +72,6 @@
                     <a href="signIn.html">Log in</a>
                     <a href="signUp.html">Register</a>
                 </div> -->
-            </div>
-            <div class="footer-right">
-                <div class="footer-sign">
-                    <a href="signIn.html">Log in</a>
-                    <a href="signUp.html">Register</a>
-                </div>
                 <div class="footer-links">
                     <a href="#"><img src="../assets/homepage/l1.png"></a>
                     <a href="#"><img src="../assets/homepage/l2.png"></a>
