--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -53,6 +53,14 @@
                 <a href="index.html">Home</a>
                 <a href="trip.html">Trip</a>
                 <a href="aboutUs.html">About Us</a>
+                <a href="signIn.html">Log in</a>
+                <a href="signUp.html">Register</a>
+            </div>
+            <div class="footer-right">
+                <!-- <div class="footer-sign">
+                    <a href="signIn.html">Log in</a>
+                    <a href="signUp.html">Register</a>
+                </div> -->
             </div>
             <div class="footer-right">
                 <div class="footer-sign">
