--- a/html/admin.html
+++ b/html/admin.html
@@ -19,6 +19,7 @@
                             <a href="index.html">HOME</a>
                             <a href="trip.html">TRIP</a>
                             <a href="aboutUs.html">ABOUT US</a>
+                            <a href="admin.html"><span>ADMIN</span></a>
                             <a href="#"><span>ADMIN</span></a>
                         </div>
                     </nav>
@@ -26,6 +27,22 @@
             <div class="admin-second-container trip-second-container">
                 <div class="trip-sidebar">
                     <div class="trip-province">
+                        <h1 class="province-heading">Trips</h1>
+                        <a href="available.html">Available</a>
+                        <a href="ongoing.html">Ongoing</a>
+                        <a href="achieved.html">Achieved</a>
+                        <a href="createATrip.html">Create a Trip</a>
+                        <a href="cancelATrip.html">Cancel a Trip</a>
+                    </div>
+                    <div class="trip-bus-company">
+                        <h1 class="bus-company-heading">Bookings</h1>
+                        <a href="bookAvailable.html">Available</a>
+                        <a href="bookCanceled.html">Canceled</a>
+                    </div>
+                    <div class="trip-country">
+                        <h1 class="bus-country-heading">Account</h1>
+                        <a href="index.html">Log out</a>
+
                         <h1 class="province-heading">Provinces</h1>
                         <a href="#">Kigali City</a>
                         <a href="#">North Province</a>
@@ -52,6 +69,11 @@
                             <h1 class="tripheading">Kigali City</h1>
                             <p>From: Gikondo</p>
                             <p>To: Kimironko</p>
+                            <p>Departure: 2019-01-01</p>
+                            <p>Return: 2019-12-31</p>
+                            <p>Company: Royal</p>
+                            <p>Price: 500 RWF</p>
+                            <a href="viewAvailable.html"><button>View</button></a>
                             <p>Company: Royal</p>
                             <p>Price: 500 RWF</p>
                             <button>View</button>
@@ -60,6 +82,12 @@
                             <h1 class="tripheading">North Province</h1>
                             <p>From: Nyabugogo</p>
                             <p>To: Gicumbi</p>
+                            <p>Departure: 2019-01-01</p>
+                            <p>Return: 2019-12-31</p>
+                            <p>Company: Trinity</p>
+                            <p>Price: 2000 RWF</p>
+                            <a href="viewAvailable.html"><button>View</button></a>
+
                             <p>Company: Trinity</p>
                             <p>Price: 2000 RWF</p>
                             <button>View</button>
@@ -68,6 +96,11 @@
                             <h1 class="tripheading">East Province</h1>
                             <p>From: Nyabugogo</p>
                             <p>To: Rwamagana</p>
+                            <p>Departure: 2019-01-01</p>
+                            <p>Return: 2019-12-31</p>
+                            <p>Company: Ritco</p>
+                            <p>Price: 3000 RWF</p>
+                            <a href="viewAvailable.html"><button>View</button></a>
                             <p>Company: Ritco</p>
                             <p>Price: 3000 RWF</p>
                             <button>View</button>
@@ -83,6 +116,14 @@
                 <a href="index.html">Home</a>
                 <a href="trip.html">Trip</a>
                 <a href="aboutUs.html">About Us</a>
+                <a href="signIn.html">Log in</a>
+                <a href="signUp.html">Register</a>
+            </div>
+            <div class="footer-right">
+                <!-- <div class="footer-sign">
+                    <a href="signIn.html">Log in</a>
+                    <a href="signUp.html">Register</a>
+                </div> -->
             </div>
             <div class="footer-right">
                 <div class="footer-sign">
