--- a/html/bookAvailable.html
+++ b/html/bookAvailable.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>User</title>
-        <link rel="stylesheet" href="../css/user.css">
+        <title>Admin</title>
+        <link rel="stylesheet" href="../css/admin.css">
         <link rel="icon" type="image/png" href="../assets/homepage/logo.png" >
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/trip.css">
     </head>
     <body>
-        <div class="user-container">
+        <div class="admin-container">
             <header id="navbar">
                     <!-- <a class="l1" href="#home"> <img class="img1" src="assets/homepage/logo.png"></a> -->
                     <nav>
@@ -19,46 +19,28 @@
                             <a href="index.html">HOME</a>
                             <a href="trip.html">TRIP</a>
                             <a href="aboutUs.html">ABOUT US</a>
-                            <a href="user.html"><span>USER-NAME</span></a>
-
-                            <a href="#"><span>USER-NAME</span></a>
+                            <a href="admin.html"><span>ADMIN</span></a>
                         </div>
                     </nav>
             </header>
-            <div class="user-second-container trip-second-container">
+            <div class="admin-second-container trip-second-container">
                 <div class="trip-sidebar">
                     <div class="trip-province">
-                        <h1 class="province-heading">Trip</h1>
-                        <a href="availableU.html">Available</a>
-                        <a href="ongoingU.html">Ongoing</a>
-                        <a href="achievedU.html">Achieved</a>
+                        <h1 class="province-heading">Trips</h1>
+                        <a href="available.html">Available</a>
+                        <a href="ongoing.html">Ongoing</a>
+                        <a href="achieved.html">Achieved</a>
+                        <a href="createATrip.html">Create a Trip</a>
+                        <a href="cancelATrip.html">Cancel a Trip</a>
                     </div>
                     <div class="trip-bus-company">
                         <h1 class="bus-company-heading">Bookings</h1>
-                        <a href="bookAvailableU.html">Available</a>
-                        <a href="bookCanceledU.html">Canceled</a>
+                        <a href="bookAvailable.html">Available</a>
+                        <a href="bookCanceled.html">Canceled</a>
                     </div>
                     <div class="trip-country">
                         <h1 class="bus-country-heading">Account</h1>
                         <a href="index.html">Log out</a>
-                        <h1 class="province-heading">Provinces</h1>
-                        <a href="#">Kigali City</a>
-                        <a href="#">North Province</a>
-                        <a href="#">East Province</a>
-                        <a href="#">West Province</a>
-                        <a href="#">South Province</a>
-                    </div>
-                    <div class="trip-bus-company">
-                        <h1 class="bus-company-heading">Companies</h1>
-                        <a href="#">KBS</a>
-                        <a href="#">Royal</a>
-                        <a href="#">Ritco</a>
-                        <a href="#">Trinity</a>
-                        <a href="#">Volcano</a>
-                    </div>
-                    <div class="trip-country">
-                        <h1 class="bus-country-heading">Country</h1>
-                        <a href="#">Rwanda</a>
                     </div>
                 </div>
                 <div class="trip-content">
@@ -71,10 +53,7 @@
                             <p>Return: 2019-12-31</p>
                             <p>Company: Royal</p>
                             <p>Price: 500 RWF</p>
-                            <a href="viewAvailableU.html"><button>View</button></a>
-                            <p>Company: Royal</p>
-                            <p>Price: 500 RWF</p>
-                            <button>View</button>
+                            <a href="viewAvailable.html"><button>View</button></a>
                         </div>
                         <div class="trip1">
                             <h1 class="tripheading">North Province</h1>
@@ -84,10 +63,7 @@
                             <p>Return: 2019-12-31</p>
                             <p>Company: Trinity</p>
                             <p>Price: 2000 RWF</p>
-                            <a href="viewAvailableU.html"><button>View</button></a>
-                            <p>Company: Trinity</p>
-                            <p>Price: 2000 RWF</p>
-                            <button>View</button>
+                            <a href="viewAvailable.html"><button>View</button></a>
                         </div>
                         <div class="trip1">
                             <h1 class="tripheading">East Province</h1>
@@ -97,10 +73,7 @@
                             <p>Return: 2019-12-31</p>
                             <p>Company: Ritco</p>
                             <p>Price: 3000 RWF</p>
-                            <a href="viewAvailableU.html"><button>View</button></a>
-                            <p>Company: Ritco</p>
-                            <p>Price: 3000 RWF</p>
-                            <button>View</button>
+                            <a href="viewAvailable.html"></a><button>View</button></a>
                         </div>
                     </div>
                     <div class="trip-content-row2">
@@ -121,12 +94,6 @@
                     <a href="signIn.html">Log in</a>
                     <a href="signUp.html">Register</a>
                 </div> -->
-            </div>
-            <div class="footer-right">
-                <div class="footer-sign">
-                    <a href="signIn.html">Log in</a>
-                    <a href="signUp.html">Register</a>
-                </div>
                 <div class="footer-links">
                     <a href="#"><img src="../assets/homepage/l1.png"></a>
                     <a href="#"><img src="../assets/homepage/l2.png"></a>
