--- a/html/bookSeatU.html
+++ b/html/bookSeatU.html
@@ -13,14 +13,6 @@
     </head>
     <body>
         <div class="oneTrip-container">
-        <title>Book a seat</title>
-        <link rel="stylesheet" href="../css/bookSeat.css">
-        <link rel="icon" type="image/png" href="../assets/homepage/logo.png" >
-        <link rel="stylesheet" type="text/css" href="../css/style.css">
-        <link rel="stylesheet" type="text/css" href="../css/trip.css">
-    </head>
-    <body>
-        <div class="bookSeat-container">
             <header id="navbar">
                     <!-- <a class="l1" href="#home"> <img class="img1" src="assets/homepage/logo.png"></a> -->
                     <nav>
@@ -28,7 +20,7 @@
                             <a href="index.html">HOME</a>
                             <a href="trip.html">TRIP</a>
                             <a href="aboutUs.html">ABOUT US</a>
-                            <a href="admin.html"><span>ADMIN</span></a>
+                            <a href="user.html"><span>USER-NAME</span></a>
                         </div>
                     </nav>
             </header>
@@ -36,16 +28,14 @@
                 <div class="trip-sidebar">
                     <div class="trip-province">
                         <h1 class="province-heading">Trips</h1>
-                        <a href="available.html">Available</a>
-                        <a href="ongoing.html">Ongoing</a>
-                        <a href="achieved.html">Achieved</a>
-                        <a href="createATrip.html">Create a Trip</a>
-                        <a href="cancelATrip.html">Cancel a Trip</a>
+                        <a href="availableU.html">Available</a>
+                        <a href="ongoingU.html">Ongoing</a>
+                        <a href="achievedU.html">Achieved</a>
                     </div>
                     <div class="trip-bus-company">
                         <h1 class="bus-company-heading">Bookings</h1>
-                        <a href="bookAvailable.html">Available</a>
-                        <a href="bookCanceled.html">Canceled</a>
+                        <a href="bookAvailableU.html">Available</a>
+                        <a href="bookCanceledU.html">Canceled</a>
                     </div>
                     <div class="trip-country">
                         <h1 class="bus-country-heading">Account</h1>
@@ -117,51 +107,8 @@
                         </div>
                         <div class="text-bottom">
                             <button>Book Now</button>
-                            <a href="viewAvailable.html"><button>Back</button></a>
+                            <a href="viewAvailableU.html"><button>Back</button></a>
                         </div>
-                            <a href="signIn.html">LOG IN</a>
-                            <a href="signUp.html">REGISTER</a>
-                        </div>
-                    </nav>
-            </header>
-            <div class="bookSeat-second-container">
-                <div class="trip-sidebar">
-                    <div class="trip-province">
-                        <h1 class="province-heading">Provinces</h1>
-                        <a href="#">Kigali City</a>
-                        <a href="#">North Province</a>
-                        <a href="#">East Province</a>
-                        <a href="#">West Province</a>
-                        <a href="#">South Province</a>
-                    </div>
-                    <div class="trip-bus-company">
-                        <h1 class="bus-company-heading">Companies</h1>
-                        <a href="#">KBS</a>
-                        <a href="#">Royal</a>
-                        <a href="#">Ritco</a>
-                        <a href="#">Trinity</a>
-                        <a href="#">Volcano</a>
-                    </div>
-                    <div class="trip-country">
-                        <h1 class="bus-country-heading">Country</h1>
-                        <a href="#">Rwanda</a>
-                    </div>
-                </div>
-                <div class="bookSeat-content">
-                    <div class="bookSeat">
-                        <h1>Kigali City</h1>
-                        <p>From: <span>Gikondo</span></p>
-                        <p>To: <span>Kimironko</span></p>
-                        <p>Departure: <span>2019-01-01</span></p>
-                        <p>Return: <span>2019-12-31</span></p>
-                        <p>Company: <span>KBS</span></p>
-                        <p>Bus Number: <span>215</span></p>
-                        <p>Seats available: 
-                            <span><input type="number" value="30" style="width: 30px"> </span>
-                        </p>
-                        <p>Refundable: <span>No</span></p>
-                        <p>Price: <span>300 RWF</span></p>
-                        <button>Book now</button>
                     </div>
                 </div>
             </div>
@@ -179,12 +126,6 @@
                     <a href="signIn.html">Log in</a>
                     <a href="signUp.html">Register</a>
                 </div> -->
-            </div>
-            <div class="footer-right">
-                <div class="footer-sign">
-                    <a href="signIn.html">Log in</a>
-                    <a href="signUp.html">Register</a>
-                </div>
                 <div class="footer-links">
                     <a href="#"><img src="../assets/homepage/l1.png"></a>
                     <a href="#"><img src="../assets/homepage/l2.png"></a>
