--- a/html/index.html
+++ b/html/index.html
@@ -32,9 +32,9 @@
             <div class="trip-box" id="trip-box">
                 <h1 class="trip-box-heading">Bus: Compare and book the cheapest bus</h1>
                 <div class="search-box">
-                    <input type="radio" name="trip"> Return
-                    <input type="radio" name="trip"> One way
-                    <input type="radio" name="trip"> Multi-city
+                    <input class="radio" type="radio" name="trip"> Return
+                    <input class="radio" type="radio" name="trip"> One way
+                    <input class="radio" type="radio" name="trip"> Multi-city
                     <input type="checkbox" name="trip"> Only direct<br><br>
                     <input type="text" placeholder="From" class="text">
                     <input type="text" placeholder="To" class="text">
@@ -45,7 +45,9 @@
                         <option value="Children (2-13)">Children (2-13)</option>
                         <option value="Infants (< 2)">Infants (< 2)</option>
                     </select><br>
-                    <button>Search Bus</button>
+                    <a href="trip.html">
+                        <button><b>Search Bus</b></button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -66,12 +68,14 @@
                 <a href="index.html">Home</a>
                 <a href="trip.html">Trip</a>
                 <a href="aboutUs.html">About Us</a>
+                <a href="signIn.html">Log in</a>
+                <a href="signUp.html">Register</a>
             </div>
             <div class="footer-right">
-                <div class="footer-sign">
+                <!-- <div class="footer-sign">
                     <a href="signIn.html">Log in</a>
                     <a href="signUp.html">Register</a>
-                </div>
+                </div> -->
                 <div class="footer-links">
                     <a href="#"><img src="../assets/homepage/l1.png"></a>
                     <a href="#"><img src="../assets/homepage/l2.png"></a>
