--- a/html/trip.html
+++ b/html/trip.html
@@ -45,6 +45,11 @@
                         <h1 class="bus-country-heading">Country</h1>
                         <a href="#">Rwanda</a>
                     </div>
+                    </div>
+                    <div class="trip-country">
+                        <h1 class="bus-country-heading">Country</h1>
+                        <a href="#">Rwanda</a>
+                    </div>
                 </div>
                 <div class="trip-content">
                     <div class="trip-content-row1">
@@ -52,6 +57,12 @@
                             <h1 class="tripheading">Kigali City</h1>
                             <p>From: Gikondo</p>
                             <p>To: Kimironko</p>
+                            <p>Departure: 2019-01-01</p>
+                            <p>Return: 2019-12-31</p>
+                            <p>Company: Royal</p>
+                            <p>Price: 500 RWF</p>
+                            <a href="oneTrip.html"><button>Book Now</button></a>
+
                             <p>Company: Royal</p>
                             <p>Price: 500 RWF</p>
                             <button>Book Now</button>
@@ -60,6 +71,11 @@
                             <h1 class="tripheading">North Province</h1>
                             <p>From: Nyabugogo</p>
                             <p>To: Gicumbi</p>
+                            <p>Departure: 2019-01-01</p>
+                            <p>Return: 2019-12-31</p>
+                            <p>Company: Trinity</p>
+                            <p>Price: 2000 RWF</p>
+                            <a href="oneTrip.html"><button>Book Now</button></a>
                             <p>Company: Trinity</p>
                             <p>Price: 2000 RWF</p>
                             <button>Book Now</button>
@@ -68,6 +84,11 @@
                             <h1 class="tripheading">East Province</h1>
                             <p>From: Nyabugogo</p>
                             <p>To: Rwamagana</p>
+                            <p>Departure: 2019-01-01</p>
+                            <p>Return: 2019-12-31</p>
+                            <p>Company: Ritco</p>
+                            <p>Price: 3000 RWF</p>
+                            <a href="oneTrip.html"><button>Book Now</button></a>
                             <p>Company: Ritco</p>
                             <p>Price: 3000 RWF</p>
                             <button>Book Now</button>
@@ -83,6 +104,14 @@
                 <a href="index.html">Home</a>
                 <a href="trip.html">Trip</a>
                 <a href="aboutUs.html">About Us</a>
+                <a href="signIn.html">Log in</a>
+                <a href="signUp.html">Register</a>
+            </div>
+            <div class="footer-right">
+                <!-- <div class="footer-sign">
+                    <a href="signIn.html">Log in</a>
+                    <a href="signUp.html">Register</a>
+                </div> -->
             </div>
             <div class="footer-right">
                 <div class="footer-sign">
