ch(feedback-UI): delivered the feedback on the UI (#17)
* ft (*): add homepage

* Ft homepage #167606375 (#2)

* ft add task file for all tasks

* chore (css): add css file

* ft (*): add style

* ft (*): add style

* Ft signup #167275922 (#3)

* chore (css): add style to the file

* Chore (css): add picture

* Ft signin #167276116 (#4)

* chore (css): add style to it

* chore (css): add a picture

* chore (css): add style to it (#5)

* chore (css): add style to it (#6)

* chore(css): add style to it (#7)

* chore (css): add style to it (#8)

* chore(css): add style to it (#9)

* chore(css): add style to it (#10)

* chore(css): add style to it (#11)

* Ft delete booking #167276138 (#12)

* chore (css): add style to it

* chore (css): add a picture

* Ch button links 167708504 (#16)

* ch ( css): add a picture

* ft add the git ignore

* ch: resizing the age input, reduce padding in the below div also in the footer with inline display

* ch(feedback-UI): delivered the feedback on the UI

--- a/html/achievedU.html
+++ b/html/achievedU.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>User</title>
-        <link rel="stylesheet" href="../css/user.css">
+        <title>Admin</title>
+        <link rel="stylesheet" href="../css/admin.css">
         <link rel="icon" type="image/png" href="../assets/homepage/logo.png" >
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/trip.css">
     </head>
     <body>
-        <div class="user-container">
+        <div class="admin-container">
             <header id="navbar">
                     <!-- <a class="l1" href="#home"> <img class="img1" src="assets/homepage/logo.png"></a> -->
                     <nav>
@@ -23,10 +23,10 @@
                         </div>
                     </nav>
             </header>
-            <div class="user-second-container trip-second-container">
+            <div class="admin-second-container trip-second-container">
                 <div class="trip-sidebar">
                     <div class="trip-province">
-                        <h1 class="province-heading">Trip</h1>
+                        <h1 class="province-heading">Trips</h1>
                         <a href="availableU.html">Available</a>
                         <a href="ongoingU.html">Ongoing</a>
                         <a href="achievedU.html">Achieved</a>
@@ -51,7 +51,7 @@
                             <p>Return: 2019-12-31</p>
                             <p>Company: Royal</p>
                             <p>Price: 500 RWF</p>
-                            <a href="viewAvailableU.html"><button>View</button></a>
+                            <a href="viewAchievedU.html"><button>View</button></a>
                         </div>
                         <div class="trip1">
                             <h1 class="tripheading">North Province</h1>
@@ -61,7 +61,7 @@
                             <p>Return: 2019-12-31</p>
                             <p>Company: Trinity</p>
                             <p>Price: 2000 RWF</p>
-                            <a href="viewAvailableU.html"><button>View</button></a>
+                            <a href="viewAchievedU.html"><button>View</button></a>
                         </div>
                         <div class="trip1">
                             <h1 class="tripheading">East Province</h1>
@@ -71,7 +71,7 @@
                             <p>Return: 2019-12-31</p>
                             <p>Company: Ritco</p>
                             <p>Price: 3000 RWF</p>
-                            <a href="viewAvailableU.html"><button>View</button></a>
+                            <a href="viewAchievedU.html"><button>View</button></a>
                         </div>
                     </div>
                     <div class="trip-content-row2">
