--- a/html/bookSeatU.html
+++ b/html/bookSeatU.html
@@ -20,7 +20,7 @@
                             <a href="index.html">HOME</a>
                             <a href="trip.html">TRIP</a>
                             <a href="aboutUs.html">ABOUT US</a>
-                            <a href="admin.html"><span>ADMIN</span></a>
+                            <a href="user.html"><span>USER-NAME</span></a>
                         </div>
                     </nav>
             </header>
@@ -28,16 +28,14 @@
                 <div class="trip-sidebar">
                     <div class="trip-province">
                         <h1 class="province-heading">Trips</h1>
-                        <a href="available.html">Available</a>
-                        <a href="ongoing.html">Ongoing</a>
-                        <a href="achieved.html">Achieved</a>
-                        <a href="createATrip.html">Create a Trip</a>
-                        <a href="cancelATrip.html">Cancel a Trip</a>
+                        <a href="availableU.html">Available</a>
+                        <a href="ongoingU.html">Ongoing</a>
+                        <a href="achievedU.html">Achieved</a>
                     </div>
                     <div class="trip-bus-company">
                         <h1 class="bus-company-heading">Bookings</h1>
-                        <a href="bookAvailable.html">Available</a>
-                        <a href="bookCanceled.html">Canceled</a>
+                        <a href="bookAvailableU.html">Available</a>
+                        <a href="bookCanceledU.html">Canceled</a>
                     </div>
                     <div class="trip-country">
                         <h1 class="bus-country-heading">Account</h1>
@@ -109,7 +107,7 @@
                         </div>
                         <div class="text-bottom">
                             <button>Book Now</button>
-                            <a href="viewAvailable.html"><button>Back</button></a>
+                            <a href="viewAvailableU.html"><button>Back</button></a>
                         </div>
                     </div>
                 </div>
