--- a/html/availableU.html
+++ b/html/availableU.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>User</title>
-        <link rel="stylesheet" href="../css/user.css">
+        <title>Admin</title>
+        <link rel="stylesheet" href="../css/admin.css">
         <link rel="icon" type="image/png" href="../assets/homepage/logo.png" >
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/trip.css">
     </head>
     <body>
-        <div class="user-container">
+        <div class="admin-container">
             <header id="navbar">
                     <!-- <a class="l1" href="#home"> <img class="img1" src="assets/homepage/logo.png"></a> -->
                     <nav>
@@ -23,10 +23,10 @@
                         </div>
                     </nav>
             </header>
-            <div class="user-second-container trip-second-container">
+            <div class="admin-second-container trip-second-container">
                 <div class="trip-sidebar">
                     <div class="trip-province">
-                        <h1 class="province-heading">Trip</h1>
+                        <h1 class="province-heading">Trips</h1>
                         <a href="availableU.html">Available</a>
                         <a href="ongoingU.html">Ongoing</a>
                         <a href="achievedU.html">Achieved</a>
