--- a/html/signIn.html
+++ b/html/signIn.html
@@ -28,7 +28,7 @@
                     <h1 class="signinh1">Sign in</h1>
                     <input type="text" id="txt" placeholder="Username/E-mail"><br>
                     <input type="password" id="txt" placeholder="Password"><br>
-                    <input type="button" id="submit" value="Sign in"><br>
+                    <a href="people.html"><input type="button" id="submit" value="Sign in"></a><br>
                     <a href="signUp.html" class="signup">Create an account</a>
                 </div>
             </div>
@@ -38,12 +38,14 @@
                 <a href="index.html">Home</a>
                 <a href="trip.html">Trip</a>
                 <a href="aboutUs.html">About Us</a>
+                <a href="signIn.html">Log in</a>
+                <a href="signUp.html">Register</a>
             </div>
             <div class="footer-right">
-                <div class="footer-sign">
+                <!-- <div class="footer-sign">
                     <a href="signIn.html">Log in</a>
                     <a href="signUp.html">Register</a>
-                </div>
+                </div> -->
                 <div class="footer-links">
                     <a href="#"><img src="../assets/homepage/l1.png"></a>
                     <a href="#"><img src="../assets/homepage/l2.png"></a>
