--- a/html/signUp.html
+++ b/html/signUp.html
@@ -31,7 +31,7 @@
                     <input type="text" id="txt" placeholder="E-mail">
                     <input type="number" id="txt" placeholder="Phone Number">
                     <input type="password" id="txt" placeholder="Password"><br>
-                    <input type="button" id="submit" value="Sign Up"><br>
+                    <a href="people.html"><input type="button" id="submit" value="Sign Up"></a><br>
                     <a href="signIn.html" class="signin">Sign in instead</a>
                 </div>
             </div>
@@ -41,12 +41,14 @@
                 <a href="index.html">Home</a>
                 <a href="trip.html">Trip</a>
                 <a href="aboutUs.html">About Us</a>
+                <a href="signIn.html">Log in</a>
+                <a href="signUp.html">Register</a>
             </div>
             <div class="footer-right">
-                <div class="footer-sign">
+                <!-- <div class="footer-sign">
                     <a href="signIn.html">Log in</a>
                     <a href="signUp.html">Register</a>
-                </div>
+                </div> -->
                 <div class="footer-links">
                     <a href="#"><img src="../assets/homepage/l1.png"></a>
                     <a href="#"><img src="../assets/homepage/l2.png"></a>
