--- a/html/trip.html
+++ b/html/trip.html
@@ -52,25 +52,31 @@
                             <h1 class="tripheading">Kigali City</h1>
                             <p>From: Gikondo</p>
                             <p>To: Kimironko</p>
+                            <p>Departure: 2019-01-01</p>
+                            <p>Return: 2019-12-31</p>
                             <p>Company: Royal</p>
                             <p>Price: 500 RWF</p>
-                            <button>Book Now</button>
+                            <a href="oneTrip.html"><button>Book Now</button></a>
                         </div>
                         <div class="trip1">
                             <h1 class="tripheading">North Province</h1>
                             <p>From: Nyabugogo</p>
                             <p>To: Gicumbi</p>
+                            <p>Departure: 2019-01-01</p>
+                            <p>Return: 2019-12-31</p>
                             <p>Company: Trinity</p>
                             <p>Price: 2000 RWF</p>
-                            <button>Book Now</button>
+                            <a href="oneTrip.html"><button>Book Now</button></a>
                         </div>
                         <div class="trip1">
                             <h1 class="tripheading">East Province</h1>
                             <p>From: Nyabugogo</p>
                             <p>To: Rwamagana</p>
+                            <p>Departure: 2019-01-01</p>
+                            <p>Return: 2019-12-31</p>
                             <p>Company: Ritco</p>
                             <p>Price: 3000 RWF</p>
-                            <button>Book Now</button>
+                            <a href="oneTrip.html"><button>Book Now</button></a>
                         </div>
                     </div>
                     <div class="trip-content-row2">
@@ -83,12 +89,14 @@
                 <a href="index.html">Home</a>
                 <a href="trip.html">Trip</a>
                 <a href="aboutUs.html">About Us</a>
+                <a href="signIn.html">Log in</a>
+                <a href="signUp.html">Register</a>
             </div>
             <div class="footer-right">
-                <div class="footer-sign">
+                <!-- <div class="footer-sign">
                     <a href="signIn.html">Log in</a>
                     <a href="signUp.html">Register</a>
-                </div>
+                </div> -->
                 <div class="footer-links">
                     <a href="#"><img src="../assets/homepage/l1.png"></a>
                     <a href="#"><img src="../assets/homepage/l2.png"></a>
