--- a/html/viewAvailable.html
+++ b/html/viewAvailable.html
@@ -19,32 +19,28 @@
                             <a href="index.html">HOME</a>
                             <a href="trip.html">TRIP</a>
                             <a href="aboutUs.html">ABOUT US</a>
-                            <a href="signIn.html">LOG IN</a>
-                            <a href="signUp.html">REGISTER</a>
+                            <a href="admin.html"><span>ADMIN</span></a>
                         </div>
                     </nav>
             </header>
             <div class="oneTrip-second-container">
                 <div class="trip-sidebar">
                     <div class="trip-province">
-                        <h1 class="province-heading">Provinces</h1>
-                        <a href="#">Kigali City</a>
-                        <a href="#">North Province</a>
-                        <a href="#">East Province</a>
-                        <a href="#">West Province</a>
-                        <a href="#">South Province</a>
+                        <h1 class="province-heading">Trips</h1>
+                        <a href="available.html">Available</a>
+                        <a href="ongoing.html">Ongoing</a>
+                        <a href="achieved.html">Achieved</a>
+                        <a href="createATrip.html">Create a Trip</a>
+                        <a href="cancelATrip.html">Cancel a Trip</a>
                     </div>
                     <div class="trip-bus-company">
-                        <h1 class="bus-company-heading">Companies</h1>
-                        <a href="#">KBS</a>
-                        <a href="#">Royal</a>
-                        <a href="#">Ritco</a>
-                        <a href="#">Trinity</a>
-                        <a href="#">Volcano</a>
+                        <h1 class="bus-company-heading">Bookings</h1>
+                        <a href="bookAvailable.html">Available</a>
+                        <a href="bookCanceled.html">Canceled</a>
                     </div>
                     <div class="trip-country">
-                        <h1 class="bus-country-heading">Country</h1>
-                        <a href="#">Rwanda</a>
+                        <h1 class="bus-country-heading">Account</h1>
+                        <a href="index.html">Log out</a>
                     </div>
                 </div>
                 <div class="trip-content">
@@ -56,10 +52,11 @@
                         <p>Return: <span>2019-12-31</span></p>
                         <p>Company: <span>KBS</span></p>
                         <p>Bus Number: <span>215</span></p>
-                        <p>Seats available: <span>30</span></p>
+                        <p>Seats available: <span>26</span></p>
                         <p>Refundable: <span>No</span></p>
                         <p>Price: <span>300 RWF</span></p>
-                        <a href="signIn.html"><button>Book Now</button></a>
+                        <a href="bookSeat.html"><button>Book a Seat</button></a>
+                        <a href="available.html"><button>Back</button></a>
                     </div>
                 </div>
             </div>
