--- a/html/cancelATrip.html
+++ b/html/cancelATrip.html
@@ -43,12 +43,14 @@
                 <a href="index.html">Home</a>
                 <a href="trip.html">Trip</a>
                 <a href="aboutUs.html">About Us</a>
+                <a href="signIn.html">Log in</a>
+                <a href="signUp.html">Register</a>
             </div>
             <div class="footer-right">
-                <div class="footer-sign">
+                <!-- <div class="footer-sign">
                     <a href="signIn.html">Log in</a>
                     <a href="signUp.html">Register</a>
-                </div>
+                </div> -->
                 <div class="footer-links">
                     <a href="#"><img src="../assets/homepage/l1.png"></a>
                     <a href="#"><img src="../assets/homepage/l2.png"></a>
