ch(feedback-UI): Delivere second feedback on UI. (#18)

--- a/html/oneTrip.html
+++ b/html/oneTrip.html
@@ -61,6 +61,9 @@
                         <p>Price: <span>300 RWF</span></p>
                         <a href="signIn.html"><button>Book Now</button></a>
                     </div>
+                    <div class="picture">
+                        <img src="../assets/trip/a2.jpg">
+                    </div>
                 </div>
             </div>
         </div>
