--- a/html/achievedU.html
+++ b/html/achievedU.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/png" href="../assets/homepage/logo.png" >
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/trip.css">
+        <link rel="stylesheet" type="text/css" href="../css/oneTrip.css">
     </head>
     <body>
         <div class="admin-container">
