--- a/html/signIn.html
+++ b/html/signIn.html
@@ -26,7 +26,7 @@
             <div class="signin-second-container">
                 <div class="signin_form">
                     <h1 class="signinh1">Sign in</h1>
-                    <input type="text" id="txt" placeholder="Username/E-mail"><br>
+                    <input type="text" id="txt" placeholder="Username/Email"><br>
                     <input type="password" id="txt" placeholder="Password"><br>
                     <a href="people.html"><input type="button" id="submit" value="Sign in"></a><br>
                     <a href="signUp.html" class="signup">Create an account</a>
