--- a/html/signUp.html
+++ b/html/signUp.html
@@ -28,7 +28,7 @@
                     <h1>Register</h1>
                     <input type="text" id="txt" placeholder="First Name">
                     <input type="text" id="txt" placeholder="Last Name"><br>
-                    <input type="text" id="txt" placeholder="E-mail">
+                    <input type="text" id="txt" placeholder="Email">
                     <input type="number" id="txt" placeholder="Phone Number">
                     <input type="password" id="txt" placeholder="Password"><br>
                     <a href="people.html"><input type="button" id="submit" value="Sign Up"></a><br>
