--- a/html/viewAvailable.html
+++ b/html/viewAvailable.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/png" href="../assets/homepage/logo.png" >
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/trip.css">
+        <link rel="stylesheet" type="text/css" href="../css/oneTrip.css">
     </head>
     <body>
         <div class="oneTrip-container">
@@ -31,7 +32,6 @@
                         <a href="ongoing.html">Ongoing</a>
                         <a href="achieved.html">Achieved</a>
                         <a href="createATrip.html">Create a Trip</a>
-                        <a href="cancelATrip.html">Cancel a Trip</a>
                     </div>
                     <div class="trip-bus-company">
                         <h1 class="bus-company-heading">Bookings</h1>
@@ -57,6 +57,9 @@
                         <p>Price: <span>300 RWF</span></p>
                         <a href="bookSeat.html"><button>Book a Seat</button></a>
                         <a href="available.html"><button>Back</button></a>
+                    </div>
+                    <div class="picture">
+                        <img src="../assets/trip/a2.jpg">
                     </div>
                 </div>
             </div>
