--- a/html/viewOngoingU.html
+++ b/html/viewOngoingU.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/png" href="../assets/homepage/logo.png" >
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/trip.css">
+        <link rel="stylesheet" type="text/css" href="../css/oneTrip.css">
     </head>
     <body>
         <div class="oneTrip-container">
@@ -55,6 +56,9 @@
                         <p>Price: <span>300 RWF</span></p>
                         <a href="cancelATrip.html"><button>Cancel</button></a>
                         <a href="ongoingU.html"><button>Back</button></a>
+                    </div>
+                    <div class="picture">
+                        <img src="../assets/trip/a2.jpg">
                     </div>
                 </div>
             </div>
